# sTiles

./: .gitignore  LICENSE  README.md  extract_binaries.sh  release.sh  sync_binaries.sh
R/sTiles/: DESCRIPTION  LICENSE  NAMESPACE
R/sTiles/R/: sTiles.R
R/sTiles/src/: Makevars  sTiles_glue.c
ctest/: Makefile  run_mtx.cpp  scale_stiles.cpp  test_stiles.cpp
docs/: benchmarks.html  download.html  index.html
docs/apps_script/: Code.gs
docs/images/: _build_tile_svgs.py
docs/presentations/Montpellier/: index.html
docs/presentations/SIAMPP26/: index_talk1.html  index_talk2.html
docs/presentations/SIAMPP26/images/: msc23052_results.txt
docs/suits/: dense.html  gen_catalog.py  gen_dense.py  gen_matrix_pages.py  gen_plots.R  gen_results.py  index.html  matrix_1138_bus.html  matrix_Emilia_923.html  matrix_Fault_639.html  matrix_G2_circuit.html  matrix_af_0_k101.html  matrix_af_shell3.html  matrix_apache1.html  matrix_apache2.html  matrix_audikw_1.html  matrix_bcsstk08.html  matrix_bcsstk09.html  matrix_bcsstk10.html  matrix_bcsstk11.html  matrix_bcsstk13.html  matrix_bcsstk14.html  matrix_bcsstk15.html  matrix_bcsstk16.html  matrix_bcsstk17.html  matrix_bcsstk18.html  matrix_bmw3_2.html  matrix_bmw7st_1.html  matrix_bone010.html  matrix_boneS01.html  matrix_boneS10.html  matrix_bundle1.html  matrix_consph.html  matrix_crankseg_1.html  matrix_crankseg_2.html  matrix_ct20stif.html  matrix_ecology2.html  matrix_gyro_k.html  matrix_gyro_m.html  matrix_hood.html  (+57 more)
docs/suits/data/: banner.js  catalog.js
docs/suits/results-latest/: best_per_library.xlsx  characteristics.csv  characteristics.txt  cholmod_all.csv  compare_symbolic_sweep.py  dense_compare.csv  dense_lapack.csv  dense_numeric_all.csv  dense_plasma.csv  dense_stiles.csv  dense_symbolic.csv  giants_numeric_wide.csv  modes.csv  mumps_all.csv  numeric.csv  numeric.txt  ordering_per_matrix.csv  pardiso_all.csv  pastix_all.csv  stiles_all.csv  stiles_all.csv.bak_bern  symbolic.csv  symbolic.txt  sympack_all.csv
docs/suits/results-latest/amd/: analyze_amd.csv  cholmod_amd.csv  finalize_amd.sh  mumps_amd.csv  pardiso_amd.csv  pastix_amd.csv  stiles_auto_amd.csv  sympack_amd.csv
docs/suits/results-latest/cholmod/: README.txt  cholmod.csv  symbolic_cholmod.csv
docs/suits/results-latest/mumps/: README.txt  mumps.csv  symbolic_mumps.csv
docs/suits/results-latest/pardiso/: README.txt  pardiso.csv  symbolic_pardiso.csv
docs/suits/results-latest/pastix/: README.txt  pastix.csv  symbolic_pastix.csv
docs/suits/results-latest/plots/: gen_feature_scatter.py  gen_overview.py  gen_per_matrix_times.py  gen_per_matrix_times_amd.py  gen_per_regime_bars.py  gen_scaling.py  gen_speedup_dist.py  gen_threshold_sensitivity.py  per_matrix_table.tex  per_matrix_times.tex  per_matrix_times_amd.tex  threshold_sensitivity.tex
docs/suits/results-latest/plots/.bak_repoint/: gen_feature_scatter.py  gen_overview.py  gen_per_matrix_times.py  gen_per_regime_bars.py  gen_scaling.py  gen_speedup_dist.py  gen_threshold_sensitivity.py
docs/suits/results-latest/stiles/: README.txt  stiles_auto.csv  stiles_dense.csv  stiles_semisparse.csv  stiles_sparse.csv  symbolic_stiles_auto.csv  symbolic_stiles_semisparse.csv  symbolic_stiles_sparse.csv
docs/suits/results-latest/sympack/: README.txt  symbolic_sympack.csv  sympack.csv
examples/: Makefile  example_simple_cholesky_call  example_simple_cholesky_call.cpp
prebuilt/Build environments/Rocky8/include/: stiles.h
prebuilt/linux/cpu/: Makefile  example_sparse_cholesky_basic.cpp  example_sparse_cholesky_from_binary.cpp  plotting_python_code.ipynb
prebuilt/linux/cpu/include/: stiles.h
prebuilt/linux/gpu/: Makefile  examples_gpu_call.cpp
prebuilt/linux/gpu/include/: stiles.h
prebuilt/linux/lib/pkgconfig/: stiles.pc
python/: pyproject.toml
python/sTiles/: __init__.py  _ffi.py  _version.py  core.py
(+1 files in other folders)
