[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sTiles"
dynamic = ["version"]
description = "Python bindings for the sTiles sparse Cholesky / selected-inverse framework"
requires-python = ">=3.8"
authors = [{ name = "Esmail Abdul Fattah", email = "esmail.abdulfattah@kaust.edu.sa" }]
dependencies = ["numpy>=1.20", "scipy>=1.5"]
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://esmail-abdulfattah.github.io/sTiles/"
Repository = "https://github.com/esmail-abdulfattah/sTiles"

# PyPI project description (kept inline so the repo stays .md-free).
[project.readme]
content-type = "text/markdown"
text = """
# sTiles

High-performance **tile-based** framework for sparse **Cholesky factorization**,
**triangular solves**, and **selected inversion** of symmetric positive-definite
matrices, spanning the full spectrum from very sparse to fully dense.

This package is the **Python interface** to the `libstiles` engine. It is pure
`ctypes` (no compiler required): the correct native library for your platform is
downloaded automatically from the project's GitHub Release the first time you use it.

## Install

    pip install sTiles

## Example

    import scipy.sparse as sp
    from sTiles import sTiles

    s = sTiles(Q, cores=4, inverse=True)   # analyze + Cholesky factorize
    s.logdet            # log|Q|
    s.solve(b)          # solve Q x = b
    s.selinv_diag()     # diag(Q^-1), the marginal variances
    s.selinv_elm(i, j)  # any inverse element within the factor pattern

## Links

- Documentation: https://esmail-abdulfattah.github.io/sTiles/
- Source: https://github.com/esmail-abdulfattah/sTiles

Developed at KAUST. Free for research and academic use.
"""

[tool.setuptools]
packages = ["sTiles"]

[tool.setuptools.dynamic]
version = { attr = "sTiles._version.__version__" }

[tool.setuptools.package-data]
# Prebuilt libstiles binaries dropped in by CI (per platform sub-directory).
# These are large and are NOT committed to git; a release wheel bundles the
# matching one. Layout: _libs/<os>-<arch>/libstiles.{so,dylib} (see sync_binaries.sh).
sTiles = ["_libs/**/*.so", "_libs/**/*.dylib", "_libs/*.so", "_libs/*.dylib"]
